--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,6 +3,7 @@
     "baseUrl": "./",
     "paths": {
       "@assets/*": ["src/assets/*"],
+      "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@theme/*": ["src/theme/*"],
       "@/*": ["src/*"]
