--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "styled-components": "^6.1.1",
+    "swr": "^2.2.4",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.4.2",
