--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.30",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -49,6 +50,7 @@
     "react-app-polyfill": "^3.0.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
