--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-modal": "^3.16.3",
     "@types/styled-components": "^5.1.30",
+    "axios": "^1.6.5",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
