[add] swr fetcher 생성 및 utils 폴더 alias 설정 추가

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,6 +6,7 @@
       "@components/*": ["src/components/*"],
       "@pages/*": ["src/pages/*"],
       "@theme/*": ["src/theme/*"],
+      "@utils/*": ["src/utils/*"],
       "@/*": ["src/*"]
     }
   }
