--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "craco-alias": "^3.0.1",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "date-fns": "^3.3.1",
+    "dayjs": "^1.11.10",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
@@ -52,6 +54,7 @@
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^8.10.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
