--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
+    "react-tooltip": "^5.26.3",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
